<resources>
    <string name="app_name">Ft_hangout</string>
    <string name="cd_add_contact">Add new contact</string>
    <string name="cd_save_contact">Save contact</string>
    <string name="cd_delete_contact">Delete contact</string>
    <string name="cd_call_contact">Call contact</string>
    <string name="cd_message_contact">Message contact</string>
    <string name="hint_contact_name">name</string>
    <string name="hint_phone_number">phone number</string>
    <string name="hint_postal_address">postal address</string>
    <string name="hint_email_address">email address</string>
    <string name="hint_message_body">message</string>
    <string name="button_modify_contact">Modify contact</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_green">Green</string>
    <string name="theme_red">Red</string>
    <string name="toast_invalid_phone_number">Invalid phone number</string>
    <string name="toast_new_contact_created">New contact created</string>
    <string name="toast_contact_deleted">Contact deleted</string>
    <string name="toast_contact_modified">Contact modified</string>
    <string name="toast_sms_permissions_required">The app need permissions to use SMS</string>

</resources>
